apps/ru-proxy/overlays/playground/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ru-proxy
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  rules:
    - host: ruv2.rp-wow.ru
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ru-proxy
                port:
                  number: 80
  tls:
    - hosts:
        - ruv2.rp-wow.ru
      secretName: ruv2-rp-wow-ru-tls
